<?xml version="1.0" encoding="utf-8"?>



    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.uberclone.RiderActivity" >

    <Button
        android:id="@+id/btnCallOrCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:onClick="callUber"
        android:padding="10dp"
        android:text="@string/call_an_uber"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:onClick="logoutUser"
        android:padding="10dp"
        android:text="@string/LOGOUT"
        android:textAllCaps="false" />
    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/status"
        android:textSize="24sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="left|bottom"

         />



    </fragment>


   <!-- android:onClick="callOrCancel"
-->
<!--<menu xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android">

<item android:id="@+id/book"
    android:title="book a ride" />
</menu>-->
   <!-- <?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent" >

<Button
    android:id="@+id/next_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/next" />

<FrameLayout
    android:id="@+id/map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/next_button" />

</RelativeLayout>-->


